# rust_zero2prod

./: .env  Cargo.toml  Dockerfile  spec.yml
.github/workflows/: general.yml
configuration/: base.yml
migrations/: 20230805162300_create_subscriptions_table.sql  20240101214900_create_subscription_tokens_table.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
src/routes/home/: home.html
src/routes/login/: login.html
tests/: health_check.rs
tests/api/: change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
