[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.182", features = ["derive"] }
config = "0.13.3"
uuid = { version = "1.4.1", features = ["v4"] }
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.6"
serde-aux = "4.2.0"
unicode-segmentation = "1.10.1"
validator = "0.16.1"

[dependencies.sqlx]
features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",

]
version = "0.7.1"
default-features = false


[dev-dependencies]
reqwest = "0.11.18"
once_cell = "1.18.0"
claim = "0.5.0"
fake = "2.6.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
